RESOLVED FIXED246685
WebCodecsVideoDecoderConfig description should be undefined instead of null if there is no description to provide
https://bugs.webkit.org/show_bug.cgi?id=246685
Summary WebCodecsVideoDecoderConfig description should be undefined instead of null i...
youenn fablet
Reported 2022-10-18 06:33:24 PDT
WebCodecsVideoDecoderConfig description should be undefined instead of null if there is no description to provide
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-18 06:34:48 PDT
youenn fablet
Comment 2 2022-10-18 06:59:06 PDT
EWS
Comment 3 2022-10-19 03:34:32 PDT
Committed 255726@main (146ca511cb11): <https://commits.webkit.org/255726@main> Reviewed commits have been landed. Closing PR #5490 and removing active labels.
WebKit Commit Bot
Comment 4 2022-10-19 04:23:12 PDT
Re-opened since this is blocked by bug 246740
youenn fablet
Comment 5 2022-10-20 01:06:04 PDT
EWS
Comment 6 2022-10-20 03:20:53 PDT
Committed 255780@main (35adb599351f): <https://commits.webkit.org/255780@main> Reviewed commits have been landed. Closing PR #5578 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.