Source/WebCore/Modules/webcodecs/WebCodecsVideoEncoder.cpp
@@ -120,6 +120,7 @@ ExceptionOr<void> WebCodecsVideoEncoder::configure(WebCodecsVideoEncoderConfig&&
             }
             setInternalEncoder(WTFMove(result.value()));
             m_isMessageQueueBlocked = false;
+            m_hasNewActiveConfiguration = true;
             processControlMessageQueue();
         }, [this, weakThis = WeakPtr { *this }](auto&& configuration) {
             if (!weakThis)
@@ -152,18 +153,10 @@ WebCodecsEncodedVideoChunkMetadata WebCodecsVideoEncoder::createEncodedChunkMeta
 
     m_hasNewActiveConfiguration = false;
 
-    RefPtr<ArrayBuffer> arrayBuffer;
-    if (m_activeConfiguration.description) {
-        auto arrayBuffer = ArrayBuffer::tryCreateUninitialized(m_activeConfiguration.description->size(), 0);
-        RELEASE_LOG_ERROR_IF(!!arrayBuffer, Media, "Cannot create array buffer for WebCodecs encoder description");
-        if (arrayBuffer)
-            memcpy(static_cast<uint8_t*>(arrayBuffer->data()), m_activeConfiguration.description->data(), m_activeConfiguration.description->size());
-    }
-
     // FIXME: Provide more accurate decoder configuration
     WebCodecsVideoDecoderConfig config {
-        WTFMove(m_activeConfiguration.codec),
-        WTFMove(arrayBuffer),
+        !m_activeConfiguration.codec.isEmpty() ? WTFMove(m_activeConfiguration.codec) : String { m_baseConfiguration.codec },
+        { },
         m_activeConfiguration.visibleWidth ? m_activeConfiguration.visibleWidth : m_baseConfiguration.width,
         m_activeConfiguration.visibleHeight ? m_activeConfiguration.visibleHeight : m_baseConfiguration.height,
         m_activeConfiguration.displayWidth ? m_activeConfiguration.displayWidth : m_baseConfiguration.displayWidth,
@@ -172,6 +165,16 @@ WebCodecsEncodedVideoChunkMetadata WebCodecsVideoEncoder::createEncodedChunkMeta
         HardwareAcceleration::NoPreference,
         { }
     };
+
+    RefPtr<ArrayBuffer> arrayBuffer;
+    if (m_activeConfiguration.description && m_activeConfiguration.description->size()) {
+        auto arrayBuffer = ArrayBuffer::tryCreateUninitialized(m_activeConfiguration.description->size(), 1);
+        RELEASE_LOG_ERROR_IF(!!arrayBuffer, Media, "Cannot create array buffer for WebCodecs encoder description");
+        if (arrayBuffer) {
+            memcpy(static_cast<uint8_t*>(arrayBuffer->data()), m_activeConfiguration.description->data(), m_activeConfiguration.description->size());
+            config.description = WTFMove(arrayBuffer);
+        }
+    }
 
     return WebCodecsEncodedVideoChunkMetadata { WTFMove(config) };
 }
